--- a/blogs/category1/2018/121501.md
+++ b/blogs/category1/2018/121501.md
@@ -1,10 +1,10 @@
 ---
-title: first page in category1
-date: 2018-12-15
+title: 小田的第一个博客
+date: 2022-6-27
 tags:
  - tag1
 categories:
  -  category1
 ---
 
-first page in category1
+这是小田的第一个博客，第一次尝试一些新的东西！
